fix(fixing): fix floaty fadeIn && analytics split pane overflow (#568)
* fix(fixing): fix floaty fadeIn && analytics split pane overflow

* fix (reports): fix refunds on cash_flow graphic

--- a/app/assets/stylesheets/glownet/_analytics.sass
+++ b/app/assets/stylesheets/glownet/_analytics.sass
@@ -167,7 +167,8 @@
   max-height: 0px
   transition-property: all
   transition-duration: 0.7s
-
+  overflow: hidden
+  
   &.open
     max-height: 500px
 
