--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -379,7 +379,7 @@ label
   position: absolute
   right: 22px
   bottom: 20px
-  z-index: 1000
+  z-index: 1
   ul
     padding: 0
 
@@ -387,13 +387,7 @@ label
   margin: 0 0 10px
   padding: 0 0 0 6px
   list-style: none
-  visibility: hidden
-  opacity: 0
-  transition: visibility 0s, opacity 0.5s linear
-
-.show
-  visibility: visible
-  opacity: 1
+  display: none
 
 .floaty-list-item
   position: relative
